--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "webkit-sass-rem",
+  "name": "@jswork/wsui-vw-rem",
   "version": "1.0.0",
   "description": "Rem solution based on vw and media query.",
-  "homepage": "https://github.com/afeiship/webkit-sass-rem",
+  "homepage": "https://github.com/afeiship/wsui-vw-rem",
   "author": {
     "name": "afei",
     "email": "1290657123@qq.com"
   },
   "scripts": {
-    "build": "gulp",
-    "test": "gulp test",
-    "release": "gulp && gulp test"
+    "build": "gulp"
   },
-  "main": "dist/webkit-sass-rem.scss",
+  "main": "dist/index.scss",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^9.1.5",
-    "del": "^2.2.1",
+    "@jswork/gulp-pkg-header": "^1.0.1",
+    "autoprefixer": "^9.7.4",
+    "del": "^5.1.0",
+    "express": "^4.17.1",
     "gulp": "^4.0.2",
-    "gulp-load-plugins": "^1.2.0",
+    "gulp-load-plugins": "^2.0.2",
     "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.2",
-    "yargs": "^4.7.1"
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
