--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "email": "1290657123@qq.com"
   },
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "release": "release-it"
   },
   "main": "dist/index.scss",
   "license": "MIT",
@@ -21,7 +22,8 @@
     "gulp-load-plugins": "^2.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "release-it": "^14.2.1"
   },
   "publishConfig": {
     "access": "public",
