--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "gulp-load-plugins": "^2.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
-    "release-it": "^14.2.1"
+    "gulp-sass": "^4.0.2"
   },
   "publishConfig": {
     "access": "public",
