--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gulp-load-plugins": "^2.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.67.0"
   },
   "publishConfig": {
     "access": "public",
